<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/delete_note_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/delete_message_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/delete_question"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:typeface="monospace" />

    <Button
        android:id="@+id/delete_yes_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@color/purple_700"
        android:text="@string/delete_yes"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/delete_btn_yes_text_size" />

    <Button
        android:id="@+id/delete_no_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/purple_700"
        android:text="@string/delete_no"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/delete_btn_no_text_size" />
</LinearLayout>
